@@ -1,3 +1,10 @@
+2002-10-03  Morishima <qa3507@email.mot.com>
+
+	* install.el (install-elisp-module): Delete an elc file if the
+	optional 5th argument `del-elc' is given.
+	(install-elisp-modules): Allow the optional 5th argument `del-elc'
+	and pass it to `install-elisp-module'.
+
 2002-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mcs-ltn1.el (mime-charset-to-coding-system): Allow the 2nd arg.
